profile is ready

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="auth_btn">
+                    <div class="auth_btn modal__open">
                         <img src="./images/profile-icon.svg" alt="">
                         <p>
                             <a href="#">Вход</a>  /  <a href="#">Регистрация</a>
@@ -88,6 +88,44 @@
             </div>
         </header>
         <!-- Header end -->
+
+        <!-- Login modal -->
+        <section class="modal">
+            <div class="modal__bg"></div>
+            <div class="modal__content">
+                <button class="modal__close">
+                    <img src="./images/times.svg" alt="">
+                </button>
+                <h3>ВХОД</h3>
+                <div class="inp_wrap">
+                    <input type="tel" placeholder="Телефон">
+                    <input type="password" placeholder="Пароль">
+                </div>
+                <div class="text">
+                    <p>Запомнить пароль</p>
+                    <a href="#">Забыли пароль?</a>
+                </div>
+                <button class="btn_yellow">Войти</button>
+                <h5>Нет аккаунта?</h5>
+                <button class="btn_yellow">ЗАРЕГИСТРИРОВАТЬСЯ</button>
+                <h4>Или авторизуйтесь через</h4>
+                <div class="links">
+                    <a href="#">
+                        <img src="./images/link-icon-1.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="./images/link-icon-2.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="./images/link-icon-3.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="./images/link-icon-4.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- Login modal end -->
 
         <main>
 
