products is ready

--- a/profile.html
+++ b/profile.html
@@ -217,20 +217,20 @@
                             </div>
                         </div>
                         <div class="my-ads__card_right">
-                            <h3>Продам Автомат М42 FN4 </h3>
-                            
-                            <ul>
-                                <li>Страйкбольная версия штурмовой винтовки G36C от китайского производителя CYMA</li>
-                                <li>Привода от CYMA отличаются высоким качеством сборки и надёжностью работы. По опыту использования в прокатных играх, привода CYMA показали высочайшую живучесть и прочность конструкции, простоту эксплуатации и обслуживания.</li>
-                                <li>Технические характеристики:</li>
-                                <li>Длина (приклад сложен/разложен): 500/720мм;</li>
-                                <li>Вес: 1,7кг;</li>
-                                <li>Принцип действия: электрический;</li>
-                                <li>Режим огня: одиночный/автоматический;</li>
-                                <li>Тип/емкость магазина: Бункерный/450;</li>
-                                <li>Начальная скорость: 115 м/сек шариком весом 0,2 гр;</li>
-                            </ul>
-                            
+                            <div>
+                                <h3>Продам Автомат М42 FN4 </h3>
+                                <ul>
+                                    <li>Страйкбольная версия штурмовой винтовки G36C от китайского производителя CYMA</li>
+                                    <li>Привода от CYMA отличаются высоким качеством сборки и надёжностью работы. По опыту использования в прокатных играх, привода CYMA показали высочайшую живучесть и прочность конструкции, простоту эксплуатации и обслуживания.</li>
+                                    <li>Технические характеристики:</li>
+                                    <li>Длина (приклад сложен/разложен): 500/720мм;</li>
+                                    <li>Вес: 1,7кг;</li>
+                                    <li>Принцип действия: электрический;</li>
+                                    <li>Режим огня: одиночный/автоматический;</li>
+                                    <li>Тип/емкость магазина: Бункерный/450;</li>
+                                    <li>Начальная скорость: 115 м/сек шариком весом 0,2 гр;</li>
+                                </ul>
+                            </div>
                             <div class="bottom_text">
                                 <p>3 дня назад</p>
                                 <h4>Andrey <span>22 отзывов</span></h4>
